# polygot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.kiro/specs/alive-stack/: design.md  requirements.md  tasks.md
alive-stack/: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
alive-stack/.devcontainer/: devcontainer.json
alive-stack/api-node/: Dockerfile  Dockerfile.dev  package.json
alive-stack/api-node/src/: index.js
alive-stack/chaos-cpp/: CMakeLists.txt  Dockerfile  Dockerfile.dev  main.cpp  watch.sh
alive-stack/frontend/: Dockerfile.dev  components.json  nginx.conf  package-lock.json  package.json  vite.config.ts
alive-stack/frontend/src/: App.tsx  index.css
alive-stack/frontend/src/components/: ControlPanel.tsx  HealthBars.tsx  Pet.tsx  ServiceStatus.tsx
alive-stack/load-go/: .air.toml  Dockerfile  Dockerfile.dev  go.mod  main.go
alive-stack/metrics-python/: Dockerfile  main.py  requirements.txt
alive-stack/rules-java/: Dockerfile  Dockerfile.dev  pom.xml
alive-stack/rules-java/src/main/java/com/alivestack/rules/: RulesApplication.java
alive-stack/rules-java/src/main/java/com/alivestack/rules/controller/: RulesController.java
alive-stack/rules-java/src/main/java/com/alivestack/rules/model/: MetricsRequest.java  MoodResponse.java  ServiceHealth.java
alive-stack/tests/: integration-test.sh
alive-stack/validator-rust/: Cargo.toml  Dockerfile  Dockerfile.dev
alive-stack/validator-rust/src/: main.rs
(+1 files in other folders)
